force-app/main/default/objects/FLODocs__Change_Request_Mandated_Approver__c/FLODocs__Change_Request_Mandated_Approver__c.object-meta.xml
<CustomObject>
    <label>Change Request Mandated Approver</label>
    <nameField>
        <label>Change Request Mandated Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Request Mandated Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>