force-app/main/default/objects/FLODocs__Change_Request_Mandated_Approver__c/fields/FLODocs__Chage_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Chage_Request_Name__c</fullName>
    <label>Chage Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>