force-app/main/default/objects/FLODocs__Change_Request_Mandated_Approver__c/fields/FLODocs__Change_Request__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
    <relationshipLabel>Change Request Mandated Approvers</relationshipLabel>
    <relationshipName>Change_Request_Mandated_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>