force-app/main/default/objects/FLODocs__Change_Request_Mandated_Approver__c/fields/FLODocs__Stage__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Stage__c</fullName>
    <formula>TEXT(FLODocs__Change_Request__r.FLODocs__Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>